fixed profile image positioning on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -555,4 +555,7 @@ footer .credits a {
     .about-info {
         margin-bottom: 10%;
     }
+    .about-img {
+        width: 100% !important;
+    }
 }
